Reorganized the fodler structure a little bit. Laid more of the groundwork for the item and job systems.

--- a/ShaRPGame.csproj
+++ b/ShaRPGame.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\Gameplay\Items\Model\" />
+    <Folder Include="Model\Gameplay\Jobs\Models\" />
+  </ItemGroup>
+
 </Project>
